--- a/.ai/pipeline.yaml
+++ b/.ai/pipeline.yaml
@@ -1,4 +1,4 @@
-apiVersion: ai.sap.com/v1alpha1
+apiVersion: argoproj.io/v1alpha1
 kind: WorkflowTemplate
 metadata:
   name: spinifex-embedding-pipeline
